# jax_spectres

./: .gitignore  README.md  pyproject.toml
docs/: index.rst
examples/: example_hizquasar.py
src/jax_spectres/: __init__.py  jax_spectres.py
